fixed header covering content in layouts

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,5 +1,5 @@
 .section {
-  padding-top: $spacing-unit;
+  padding-top: $spacing-unit * 2;
   padding-bottom: $spacing-unit;
 
   @include media-greater($on-laptop) {
